added rating meter code

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,8 @@
 
     <!-- Placeholder for a plot -->
     <div id="plot"></div>
+    <!-- Placeholder for a rating meter -->   
+    <div id="chart-container"></div>
 
     <!-- Create a hyperlink that calls the '/other' route when clicked. 
          Go to app.py to see how that '/other' route is defined. -->
